fix: prevent search button from overlapping navbar

--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -6,7 +6,6 @@
     height: 40px;
     margin-top: 7rem;
     position: relative;
-    z-index: 1001;
 }
 
 .search-button {
